5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1573_1331.log
== TEST (2019-03-11 15:26:08) 
-- CODE:
print(round(50/4))
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:26:11) 
-- CODE:
print(round(50/4))
-- EXECUTION TIME:
0.196967
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:26:24) 
-- CODE:
print(round(50/4, 2))
-- OUTPUT:
12.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:26:26) 
-- CODE:
print(round(50/4, 2))
-- EXECUTION TIME:
0.114303
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:27:31) 
-- CODE:
print(round(50/3))
-- EXECUTION TIME:
0.141719
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
17
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:27:34) 
-- CODE:
print(round(50/3))
-- EXECUTION TIME:
0.112404
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
17
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:28:57) 
-- CODE:
print(50//3 50%3)
-- ERROR:
File "XXXX", line 1
    print(50//3 50%3)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:29:15) 
-- CODE:
print(round(50//3 50%3)
-- ERROR:
File "XXXX", line 1
    print(round(50//3 50%3)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:30:01) 
-- CODE:
print(50//3 50%3)
-- ERROR:
File "XXXX", line 1
    print(50//3 50%3)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:31:03) 
-- CODE:
print(50//3 50%3)
-- EXECUTION TIME:
0.153351
-- ERROR:
  File "/home/codebench/codes/1573/1331/main.py", line 1
    print(50//3 50%3)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:31:52) 
-- CODE:
print(50//3 50 % 3)
-- ERROR:
File "XXXX", line 1
    print(50//3 50 % 3)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:31:55) 
-- CODE:
print(50//3 50 % 3)
-- EXECUTION TIME:
0.151497
-- ERROR:
  File "/home/codebench/codes/1573/1331/main.py", line 1
    print(50//3 50 % 3)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:32:06) 
-- CODE:
print(50//3  50 % 3)
-- ERROR:
File "XXXX", line 1
    print(50//3  50 % 3)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:32:22) 
-- CODE:
print(50//3, 50 % 3)
-- OUTPUT:
16 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:32:23) 
-- CODE:
print(50//3, 50 % 3)
-- EXECUTION TIME:
0.153297
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16 2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
